Min-width on flex items to prevent them from collapsing too much Tweak dropdown link padding

--- a/default/dropdowns.less
+++ b/default/dropdowns.less
@@ -6,7 +6,7 @@
     min-width: 200px;
 }
 
-.dropdown-menu a {
+.dropdown-menu > a {
     display: block;
     padding: 3px 20px;
 }
