--- a/default/grid.less
+++ b/default/grid.less
@@ -67,6 +67,7 @@
 .flex-item {
   .display(flex);
   .flex-direction(column);
+  min-width: 280px;
   width: 25%;
   max-width: 25%;
   padding: 10px;
